--- a/sections/项目初始化.md
+++ b/sections/项目初始化.md
@@ -1,2 +1,353 @@
-## 初始化项目
+项目初始化这块不单单讲安装 laravel，还会讲下 [tymon/jwt-auth](https://github.com/tymondesigns/jwt-auth)，[barryvdh/laravel-ide-helper](https://github.com/barryvdh/laravel-ide-helper)，[barryvdh/laravel-cors](https://github.com/barryvdh/laravel-cors)，[mews/purifier](https://github.com/mewebstudio/Purifier) 这些在项目开发很常用的包的配置
 
+## 安装项目
+
+```shell
+composer create-project laravel/laravel laravel-test-driver-development
+```
+
+## 配置 phpcs.xml
+
+```shell
+composer require --dev squizlabs/php_codesniffer
+```
+
+在项目根目录新建 phpcs.xml
+
+```xml
+<?xml version="1.0" encoding="UTF-8" ?>
+<ruleset name="helbing-ruleset">
+    <file>app</file>
+    <file>config</file>
+    <file>routes</file>
+    <file>tests</file>
+    <exclude-pattern>*/_ide_helper.php</exclude-pattern>
+    <exclude-pattern>vendor/*</exclude-pattern>
+    <exclude-pattern>database/*</exclude-pattern>
+    <arg name="report" value="summary" />
+    <arg name="colors" />
+    <arg value="p" />
+    <ini name="memory_limit" value="2048M" />
+    <rule ref="PSR2" />
+    <rule ref="Generic.Files.LineLength">
+        <properties>
+            <property name="lineLimit" value="256" />
+            <property name="absoluteLineLimit" value="256" />
+        </properties>
+    </rule>
+</ruleset>
+```
+
+这是我使用的[配置](https://gist.github.com/helbing/00ebfa491ffffe2fc8a294e072f2a579)
+
+## 配置 ide-helper
+ 
+ ```shell
+composer require --dev barryvdh/laravel-ide-helper
+composer require --dev doctrine/dbal
+```
+
+在 AppServiceProvider.php 中加入这行
+
+```php
+public function register()
+{
+    if ($this->app->environment() !== 'production') {
+        $this->app->register(\Barryvdh\LaravelIdeHelper\IdeHelperServiceProvider::class);
+    }
+    // ...
+}
+```
+
+同时在 composer.json 中声明不对 ide-helper 包自动发现
+
+生成配置文件
+
+```shell
+php artisan vendor:publish --provider="Barryvdh\LaravelIdeHelper\IdeHelperServiceProvider" --tag=config
+```
+
+这是我使用的配置
+
+```php
+return array(
+
+    /*
+    |--------------------------------------------------------------------------
+    | Filename & Format
+    |--------------------------------------------------------------------------
+    |
+    | The default filename (without extension) and the format (php or json)
+    |
+    */
+
+    'filename'  => '_ide_helper',
+    'format'    => 'php',
+
+    'meta_filename' => '.phpstorm.meta.php',
+
+    /*
+    |--------------------------------------------------------------------------
+    | Fluent helpers
+    |--------------------------------------------------------------------------
+    |
+    | Set to true to generate commonly used Fluent methods
+    |
+    */
+
+    'include_fluent' => true,
+
+    /*
+    |--------------------------------------------------------------------------
+    | Write Model Magic methods
+    |--------------------------------------------------------------------------
+    |
+    | Set to false to disable write magic methods of model
+    |
+    */
+
+    'write_model_magic_where' => true,
+
+    /*
+    |--------------------------------------------------------------------------
+    | Write Eloquent Model Mixins
+    |--------------------------------------------------------------------------
+    |
+    | This will add the necessary DocBlock mixins to the model class
+    | contained in the Laravel Framework. This helps the IDE with
+    | auto-completion.
+    |
+    | Please be aware that this setting changes a file within the /vendor directory.
+    |
+    */
+
+    'write_eloquent_model_mixins' => false,
+
+    /*
+    |--------------------------------------------------------------------------
+    | Helper files to include
+    |--------------------------------------------------------------------------
+    |
+    | Include helper files. By default not included, but can be toggled with the
+    | -- helpers (-H) option. Extra helper files can be included.
+    |
+    */
+
+    'include_helpers' => true,
+
+    'helper_files' => array(
+        base_path() . '/vendor/laravel/framework/src/Illuminate/Support/helpers.php',
+    ),
+
+    /*
+    |--------------------------------------------------------------------------
+    | Model locations to include
+    |--------------------------------------------------------------------------
+    |
+    | Define in which directories the ide-helper:models command should look
+    | for models.
+    |
+    */
+
+    'model_locations' => array(
+        'app',
+    ),
+
+
+    /*
+    |--------------------------------------------------------------------------
+    | Extra classes
+    |--------------------------------------------------------------------------
+    |
+    | These implementations are not really extended, but called with magic functions
+    |
+    */
+
+    'extra' => array(
+        'Eloquent' => array('Illuminate\Database\Eloquent\Builder', 'Illuminate\Database\Query\Builder'),
+        'Session' => array('Illuminate\Session\Store'),
+    ),
+
+    'magic' => array(
+        'Log' => array(
+            'debug'     => 'Monolog\Logger::addDebug',
+            'info'      => 'Monolog\Logger::addInfo',
+            'notice'    => 'Monolog\Logger::addNotice',
+            'warning'   => 'Monolog\Logger::addWarning',
+            'error'     => 'Monolog\Logger::addError',
+            'critical'  => 'Monolog\Logger::addCritical',
+            'alert'     => 'Monolog\Logger::addAlert',
+            'emergency' => 'Monolog\Logger::addEmergency',
+        )
+    ),
+
+    /*
+    |--------------------------------------------------------------------------
+    | Interface implementations
+    |--------------------------------------------------------------------------
+    |
+    | These interfaces will be replaced with the implementing class. Some interfaces
+    | are detected by the helpers, others can be listed below.
+    |
+    */
+
+    'interfaces' => array(),
+
+    /*
+    |--------------------------------------------------------------------------
+    | Support for custom DB types
+    |--------------------------------------------------------------------------
+    |
+    | This setting allow you to map any custom database type (that you may have
+    | created using CREATE TYPE statement or imported using database plugin
+    | / extension to a Doctrine type.
+    |
+    | Each key in this array is a name of the Doctrine2 DBAL Platform. Currently valid names are:
+    | 'postgresql', 'db2', 'drizzle', 'mysql', 'oracle', 'sqlanywhere', 'sqlite', 'mssql'
+    |
+    | This name is returned by getName() method of the specific Doctrine/DBAL/Platforms/AbstractPlatform descendant
+    |
+    | The value of the array is an array of type mappings. Key is the name of the custom type,
+    | (for example, "jsonb" from Postgres 9.4) and the value is the name of the corresponding Doctrine2 type (in
+    | our case it is 'json_array'. Doctrine types are listed here:
+    | http://doctrine-dbal.readthedocs.org/en/latest/reference/types.html
+    |
+    | So to support jsonb in your models when working with Postgres, just add the following entry to the array below:
+    |
+    | "postgresql" => array(
+    |       "jsonb" => "json_array",
+    |  ),
+    |
+    */
+    'custom_db_types' => array(),
+
+    /*
+     |--------------------------------------------------------------------------
+     | Support for camel cased models
+     |--------------------------------------------------------------------------
+     |
+     | There are some Laravel packages (such as Eloquence) that allow for accessing
+     | Eloquent model properties via camel case, instead of snake case.
+     |
+     | Enabling this option will support these packages by saving all model
+     | properties as camel case, instead of snake case.
+     |
+     | For example, normally you would see this:
+     |
+     |  * @property \Illuminate\Support\Carbon $created_at
+     |  * @property \Illuminate\Support\Carbon $updated_at
+     |
+     | With this enabled, the properties will be this:
+     |
+     |  * @property \Illuminate\Support\Carbon $createdAt
+     |  * @property \Illuminate\Support\Carbon $updatedAt
+     |
+     | Note, it is currently an all-or-nothing option.
+     |
+     */
+    'model_camel_case_properties' => true,
+
+    /*
+    |--------------------------------------------------------------------------
+    | Property Casts
+    |--------------------------------------------------------------------------
+    |
+    | Cast the given "real type" to the given "type".
+    |
+    */
+    'type_overrides' => array(
+        'integer' => 'int',
+        'boolean' => 'bool',
+    ),
+
+    /*
+    |--------------------------------------------------------------------------
+    | Include DocBlocks from classes
+    |--------------------------------------------------------------------------
+    |
+    | Include DocBlocks from classes to allow additional code inspection for
+    | magic methods and properties.
+    |
+    */
+    'include_class_docblocks' => true,
+
+);
+```
+
+为了保证每次有包安装都会自动更新 _ide_helper.php，所以在 composer.json 中加入
+
+```json
+"scripts": {
+    "post-update-cmd": [
+        "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+        "php artisan ide-helper:generate",
+        "php artisan ide-helper:meta"
+    ]
+}
+```
+
+同时将编辑 .gitignore
+
+```
+_ide_helper.php
+.phpstorm.meta.php
+```
+
+让生成的两个文件不会加入到版本库中
+
+## cors 配置
+
+```shell
+composer require barryvdh/laravel-cors
+```
+
+添加 middleware，编辑 app/Http/Kernel.php
+
+```php
+protected $middleware = [
+    // ...
+    \Barryvdh\Cors\HandleCors::class,
+];
+```
+
+添加配置文件
+
+```shell
+php artisan vendor:publish --provider="Barryvdh\Cors\ServiceProvider"
+```
+
+这是我的配置
+
+```php
+<?php
+
+return [
+
+    /*
+    |--------------------------------------------------------------------------
+    | Laravel CORS
+    |--------------------------------------------------------------------------
+    |
+    | allowedOrigins, allowedHeaders and allowedMethods can be set to array('*')
+    | to accept any value.
+    |
+    */
+
+    'supportsCredentials' => true,
+    'allowedOrigins' => [],
+    'allowedOriginsPatterns' => [
+        '/localhost(:\d+)?/',
+    ],
+    'allowedHeaders' => ['*'],
+    'allowedMethods' => ['*'],
+    'exposedHeaders' => [
+        'Authorization'
+    ],
+    'maxAge' => 0,
+
+];
+
+```
+
+- allowedOriginsPatterns 是配置 host 符合正则规则的会自动在响应头中加入 cors 头
+- exposedHeaders 中加入 Authorization 主要原因为 jwt-auth 这个包加的，后面会说
