--- a/sections/项目初始化.md
+++ b/sections/项目初始化.md
@@ -477,3 +477,16 @@ return [
 ];
 
 ```
+
+## jwt-auth 配置
+
+```shell
+composer require tymon/jwt-auth "1.*@rc"
+```
+
+添加配置文件
+
+```shell
+php artisan vendor:publish --provider="Tymon\JWTAuth\Providers\LaravelServiceProvider"
+```
+
